examples/test/testpolicy2394.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2394
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key21: value43
      key15: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value0
          key24: value2
      podSelector:
        matchLabels:
          key3: value27
          key13: value42
